tweets will be added to the list of tweets and update after each submission using ajax so the user does not need to refresh the page

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,6 +9,17 @@ textarea {
   resize: none;
 }
 
+form {
+  display: none;
+}
+
+.alert {
+  display: none;
+  color: red;
+  border: 1px solid red;
+  text-align: center;
+}
+
 .counter {
   float: right;
 }
