--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,11 +1,22 @@
 nav {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  display: flex;
+  justify-content: space-between;
   background-color: #4056A1;
   color: #FFFFff;
   height: 120px;
   width: 100%;
   z-index: 2;
   padding: 1.5em;
+}
+
+nav > button {
+  background:none;
+  border:none;
+  margin:0;
+  padding:0;
+  cursor: pointer;
+  color: #FFFFff;
 }
 
 nav.fixed {
