--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,21 +1,32 @@
-.avatar {
-  box-sizing: border-box;
-  height: 400px;
-  width: 100%;
-  margin-top: 120px;
-  background-color: #00ffac;
-  background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
+@media only screen and (max-width: 768px) {
+  .avatar {
+    height: 400px;
+    margin-top: 120px;
+    background-color: #00ffac;
+    background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
+  }
+  
+  img.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    bottom: -45px;
+    z-index: 1;
+  }
+  
+  h2 {
+    text-align: center;
+  }
 }
 
-img.centered {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  bottom: -50px;
-  z-index: 1;
-}
-
-h2 {
-  text-align: center;
+@media only screen and (min-width: 769px) {
+  .avatar {
+    height: 400px;
+    background-color: #00ffac;
+    background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
+  }
+  h2 {
+    text-align: center;
+  }
 }
