--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,3 +30,17 @@ main {
   margin-left: 5%;
   margin-right: 5%;
 }
+
+@media only screen and (min-width: 769px) {
+  .computer > main {
+    background-color: #f4f1ec;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  
+  .computer {
+    display: flex;
+    margin-top: 130px;
+    justify-content: space-evenly;
+  }
+}
