--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,39 +1,77 @@
-.tweet-container {
-  margin-top: 10px;
+@media only screen and (max-width: 768px) {
+  .tweet {
+    margin: 10px;
+    padding: 20px;
+    border: 3px solid black;
+  }
+  
+  .tweet > article > .accountInfo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .tweet:hover {
+    box-shadow: 5px 5px 0 #888;
+  }
+  
+  .name.handle {
+    margin-left: auto;
+    visibility: hidden;
+  }
+  
+  .tweet:hover > article > .accountInfo > .name.handle {
+    visibility: visible;
+  }
+  
+  .content {
+    border-bottom: 2px solid black;
+  }
+  
+  .tweet-footer {
+    padding: 0 5px 5px 5px;
+    font-size: 50%;
+  }
+  
+  .flags {
+    float: right;
+  }
 }
 
-.tweet {
-  padding: 20px;
-  border: 3px solid black;
-}
-
-.tweet > header {
-  display: flex;
-  align-items: center;
-}
-
-.tweet:hover {
-  box-shadow: 5px 5px 0 #888;
-}
-
-.name.handle {
-  margin-left: auto;
-  visibility: hidden;
-}
-
-.tweet:hover > header > .name.handle {
-  visibility: visible;
-}
-
-.content {
-  border-bottom: 2px solid black;
-}
-
-.tweet-footer {
-  padding: 0 5px 5px 5px;
-  font-size: 50%;
-}
-
-.flags {
-  float: right;
+@media only screen and (min-width: 769px) {
+  .tweet {
+    margin: 10px;
+    padding: 20px;
+    border: 3px solid black;
+  }
+  
+  .tweet > article > .accountInfo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .tweet:hover {
+    box-shadow: 5px 5px 0 #888;
+  }
+  
+  .name.handle {
+    margin-left: auto;
+    visibility: hidden;
+  }
+  
+  .tweet:hover > article > .accountInfo > .name.handle {
+    visibility: visible;
+  }
+  
+  .content {
+    border-bottom: 2px solid black;
+  }
+  
+  .tweet-footer {
+    padding: 0 5px 5px 5px;
+    font-size: 50%;
+  }
+  
+  .flags {
+    float: right;
+  }
 }
